<resources>
    <string name="app_name">My Event</string>
    <string name="Esti">Estimate people</string>
    <string name="E.Type">Event Type</string>
    <string name="Sponsors">Sponsors</string>
    <string name="Plan">Plan my Event</string>
    <string name="Wedding">Wedding</string>
    <string name="Bday">B\'day party</string>
    <string name="Corporate">Corporate function</string>
    <string name="Other">Other</string>
    <string name="Yes">yes</string>
    <string name="no">No</string>
    <string name="open">No</string>

    <string name="close">No</string>
    <string name="myevents">My Events</string>
    <string name="prof">My Profile</string>
    <string name="logout">Log out</string>
    <string name="Addaevent">Add a Event</string>


    <string-array name="event">

        <item>My Events</item>
        <item> Delete Event</item>
        <item>Update Event</item>
        <item>Add another Event</item>
    </string-array>
    <string name="Place">Event Place</string>
    <string name="Date">Enter the date</string>
    <string name="Next">Next</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_afteradded">Afteradded</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="title_activity_aftereventadded">Aftereventadded</string>
    <string name="evname">Event name</string>
    <string name="vwEvtreg">Register As Event Planner</string>
    <string name="evtregvewfullname">fullname</string>
    <string name="evtregvewemail">Email</string>
    <string name="evtregvewnumber">Phone Number</string>
    <string name="evtregvewage">Age</string>
    <string name="evtregvewdescription">Description Of Events</string>
    <string name="evtregvewpassword">Password</string>
    <string name="evtregvewerepassword">Re Enter Password</string>
    <string name="evtbtnnext">NEXT</string>
    <string name="title_activity_registeraseventplanner2">registeraseventplanner2</string>
    <string name="evtbtncancel">Cancel</string>
    <string name="evtvtnsubmit">Submit</string>
    <string name="evtbtncontinue">Continue >></string>
    <string name="title_activity_evtnavdraw">evtnavdraw</string>
    <string name="Deleteevent">Delete Event</string>
    <string name="updateevent">Update My Event</string>
    <string name="button">Login</string>
    <string name="textview">My Event</string>
    <string name="textview1">Welcome</string>
    <string name="textview3">Don\'t have an account?</string>
    <string name="textview5">Frogot Password</string>
    <string name="button3">Forgot Password?</string>
    <string name="textview6">Forgot Password</string>
    <string name="signup">Sign Up</string>
    <string name="textview7">Hello..!</string>
    <string name="signupcustomer">Customer</string>
    <string name="signupeventplanner">Event Planner</string>
    <string name="textview10">Sign up as a customer</string>
    <string name="textview11">Sign up as a Event Planner</string>
    <string name="Signupascustomer">Sign Up as a Customer</string>
    <string name="signupasaeventplanner">Sign Up as a Event Planner</string>
    <string name="singin">Sign In</string>
    <string name="dect">Deactivate</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_afterlogin">Afterlogin</string>
    <string name="textview13">Forgot Password ?</string>
    <string name="textview99">text</string>
    <string name="button11">Submit</string>
    <string name="textview98">Create new Password</string>
    <string name="donebutton">Done</string>
    <string name="post_ad">post_ad</string>
    <string name="view_ad">view_ad</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="textview20">My Event</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="password">Password</string>
    <string name="buttonsignup">Sign Up</string>

</resources>
